# resvg-wheels

./: .gitignore  .gitmodules  README.md  README.rst  add_license_file_to_wheels.py  build.py  pyproject.toml  requirements.txt
.cargo/: config.toml
.github/workflows/: ci.yml
