[build-system]
requires = ["maturin>=0.12,<0.13"]
build-backend = "maturin"

[tool.maturin]
# If I use the 'manifest-path' option, then maturin takes all the metadata from the
# Cargo.toml and ignores the metadata from pyproject.toml; it also fails to build
# a sdist for some reason. Only when pyproject.toml is in the same directory as
# Cargo.toml, everything works.
# manifest-path = "resvg/Cargo.toml"
bindings = "bin"
sdist-include = ["README.python.rst"]

[project]
name = "resvg-cli"
# comment out 'version' to use the same as Cargo.toml, only override if needed
# (e.g. for a post-release to fix some packaging issues with a previous release)
version = "0.22.0.post3"
description = "Precompiled binaries for the 'resvg' CLI tool, from the homonymous SVG rendering library."
maintainers = [{name = "Cosimo Lupo", email = "cosimo@anthrotype.com"}]
readme = {file = "README.python.rst"}

[project.urls]
repository = "https://github.com/anthrotype/resvg-wheels"
