[build-system]
requires = ["maturin>=1.7.4,<1.8"]
build-backend = "maturin"

[tool.maturin]
manifest-path = "resvg/crates/resvg/Cargo.toml"
bindings = "bin"
include = ["README.rst"]

[project]
name = "resvg-cli"
# comment out 'version' to use the same as Cargo.toml, only override if needed
# (e.g. for a post-release to fix some packaging issues with a previous release)
version = "0.44.0b2"
description = "Precompiled binaries for the 'resvg' CLI tool, from the homonymous SVG rendering library."
maintainers = [{name = "Cosimo Lupo", email = "cosimo@anthrotype.com"}]
readme = {file = "README.rst"}

[project.urls]
repository = "https://github.com/anthrotype/resvg-wheels"
